[gd_scene load_steps=9 format=3 uid="uid://drjp7u4dno3hu"]

[ext_resource type="Texture2D" uid="uid://bsoj6nd8d6ltp" path="res://assets/graphic/scare/Adobe Express - file.png" id="1_0rpjp"]
[ext_resource type="Texture2D" uid="uid://l1tv1r4dpxqe" path="res://assets/graphic/scare/floor.jpeg" id="1_fbrrp"]
[ext_resource type="Script" path="res://scripts/scare_game.gd" id="1_roei7"]
[ext_resource type="Texture2D" uid="uid://csct87xd8qinu" path="res://assets/graphic/scare/wall.jpeg" id="2_7ml5u"]
[ext_resource type="PackedScene" uid="uid://cqh5uq0l7s50w" path="res://scenes/urinal/urinal_player.tscn" id="3_ly60h"]
[ext_resource type="PackedScene" uid="uid://j41ncjt3a07g" path="res://scenes/laundry/player_hands.tscn" id="6_66mr5"]
[ext_resource type="PackedScene" uid="uid://knmsxymuw3xi" path="res://scenes/count_down.tscn" id="7_645go"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_myneq"]
size = Vector2(184, 432)

[node name="scareGame" type="Node2D"]
script = ExtResource("1_roei7")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.8, 1.5)

[node name="Floor" type="Sprite2D" parent="."]
position = Vector2(-3.99997, 2.86102e-06)
scale = Vector2(3.98662, 3.97633)
texture = ExtResource("1_fbrrp")

[node name="Wall3" type="Sprite2D" parent="."]
position = Vector2(-60, -176)
scale = Vector2(0.774194, 1.67956)
texture = ExtResource("2_7ml5u")

[node name="urinalPlayer" parent="." instance=ExtResource("3_ly60h")]
position = Vector2(-223, 15)
scale = Vector2(0.2, 0.2)

[node name="Wall" type="Sprite2D" parent="."]
position = Vector2(-372, -57.25)
scale = Vector2(1.51971, 2.93094)
texture = ExtResource("2_7ml5u")

[node name="Wall2" type="Sprite2D" parent="."]
position = Vector2(310, -56)
scale = Vector2(1.90681, 2.93094)
texture = ExtResource("2_7ml5u")

[node name="scareDoor" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_0rpjp")

[node name="playerHands" parent="." instance=ExtResource("6_66mr5")]
position = Vector2(-56, 304)
scale = Vector2(5, 5)

[node name="scarea" type="Area2D" parent="."]

[node name="scareaShape" type="CollisionShape2D" parent="scarea"]
position = Vector2(-68, -16)
shape = SubResource("RectangleShape2D_myneq")

[node name="scareButt" type="TextureButton" parent="."]
offset_left = -600.0
offset_top = -328.0
offset_right = 592.0
offset_bottom = 328.0

[node name="moveTimer" type="Timer" parent="."]
one_shot = true

[node name="handResetTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="menuTiemr" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="countDown" parent="." instance=ExtResource("7_645go")]
offset_left = -8.0
offset_top = 272.0
offset_right = -8.0
offset_bottom = 272.0

[connection signal="area_entered" from="scarea" to="." method="_on_scarea_area_entered"]
[connection signal="area_exited" from="scarea" to="." method="_on_scarea_area_exited"]
[connection signal="pressed" from="scareButt" to="." method="_on_scare_butt_pressed"]
[connection signal="timeout" from="moveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="handResetTimer" to="." method="_on_hand_reset_timer_timeout"]
[connection signal="timeout" from="menuTiemr" to="." method="_on_menu_tiemr_timeout"]
